@@ -4400,3 +4400,5 @@ $_LANG['<!netelemtype>cable well'] = 'studnia kablowa';
 $_LANG['Own node'] = 'Węzeł własny';
 $_LANG['Node shared with another entity'] = 'Węzeł współdzielony z innym podmiotem';
 $_LANG['Foreign node'] = 'Węzeł obcy';
+
+$_LANG['Your session is near to expiration! Click "OK" if you want to prevent logout.'] = 'Twoja sesja jest bliska przeterminowania! Kliknij "OK" jeśli chcesz zapobiec wylogowaniu.';
