@@ -52,7 +52,10 @@ version 25-git (????-??-??):
   - improvement: make customer and node forms responsive [chilan, ravvar]
   - improvement: phpui.open_calendar_on_input_click set to 'true' ('false' by default) enables
     old-style date picker behavior on input control click [chilan]
-  - enhancement: userpanel: session expiration time to left presented on right-top corner [chilan]
+  - enhancement: session expiration time to left presented on right-top corner [chilan]
+  - enhancement: phpui.session_expiration_warning_interval controls if session expiration
+    warning popup is displayed if given seconds left to auto-logout (default value '0'
+    means function is disabled) [chilan]
 
 version 24.0 (2019-05-16):
 
